# burn-central-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
crates/burn-central-cli/: Cargo.toml
crates/burn-central-cli/src/: app_config.rs  cli.rs  context.rs  lib.rs  version_checker.rs
crates/burn-central-cli/src/commands/: clean.rs  init.rs  login.rs  mod.rs  model.rs  package.rs  training.rs  unlink.rs
crates/burn-central-cli/src/helpers/: project.rs
crates/burn-central-cli/src/tools/: discovery.rs  mod.rs  terminal.rs  time.rs
crates/burn-central-workspace/: Cargo.toml  README.md
crates/burn-central-workspace/src/: lib.rs
crates/burn-central-workspace/src/compute_provider/: mod.rs
crates/burn-central-workspace/src/entity/projects/: mod.rs
crates/burn-central-workspace/src/entity/projects/burn_dir/: cache.rs  mod.rs
crates/burn-central-workspace/src/execution/: cancellable.rs  local.rs  mod.rs
crates/burn-central-workspace/src/generation/crate_gen/: backend.rs  mod.rs
crates/burn-central-workspace/src/tools/: check.rs  function_discovery.rs  functions_registry.rs  git.rs  mod.rs
crates/burn-central-workspace/src/tools/cargo/: mod.rs  package.rs  workspace_package.rs
xtask/: Cargo.toml
xtask/src/: main.rs
