[package]
authors = ["Tracel Technologies Inc."]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
description = "Burn Central CLI."
keywords = ["tracel", "burn-central", "burn", "sdk", "cli"]
edition.workspace = true
license.workspace = true
name = "burn-central-cli"
readme = "README.md"
repository = "https://github.com/tracel-ai/tracel/tree/main/crates/burn-central-cli"
version.workspace = true
rust-version.workspace = true

[[bin]]
name = "burn"
path = "src/bin/burn.rs"

[dependencies]
burn-central-workspace = { workspace = true }
burn-central-client = { workspace = true }

anyhow.workspace = true
clap = { workspace = true, features = ["derive", "cargo"] }
colored.workspace = true
console.workspace = true
cliclack.workspace = true
directories.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
